修改 swagger 中的 bug
